backgroung color change
changed from white to black because the font is white so it doesnt make sense

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -112,7 +112,7 @@ a:focus {
 button {
   border: none;
   font-family: var(--button-font-family);
-  backgroung-color: var(--button-backgroung-color);
+  background-color:var(--navigation-list-hover-bg-color);
   color: var(--secondary-color);
   padding: 10px;
   border-radius: 3px;
