--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -216,7 +216,7 @@ header {
   border-radius: 50%;
 }
 
-#mymaincontainer {
+#my-main-container {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
