--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #cec2c2;
+  --background-color: white;
   --primary-color: #03324a;
   --secondary-color: white;
   --font-family-sans-serif: "Lato", sans-serif;
