--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -261,3 +261,47 @@ body {
 .about-section .download-button button:hover {
   background-color: grey;
 }
+.project-section {
+  background-color: #f9f9f9;
+}
+
+.project-container {
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.project-container h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: black;
+}
+
+.project-container p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  color: black;
+  margin-bottom: 20px;
+}
+
+.project-image {
+  max-width: 700px;
+  height: auto;
+  margin-bottom: 20px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+  display: inline-block;
+  padding: 12px 24px;
+  font-size: 1rem;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #fff;
+  background-color: green;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: grey;
+}
