--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -57,7 +57,7 @@ body {
 }
 
 .navigation-list__item--active {
-  color: #16621c; /* Dark green */
+  color: white; /* Dark green */
 }
 
 .contact-us {
