--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -17,7 +17,7 @@ body {
 }
 
 .page-header {
-  background-color: #0f3b13;
+  background-color: #ffffff;
   padding: 10px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 25px;
@@ -35,7 +35,7 @@ body {
 .headername {
   font-size: 24px;
   font-weight: bold;
-  color: rgb(247, 239, 239);
+  color: rgb(7, 49, 11);
 }
 
 .main-navigation {
@@ -53,7 +53,8 @@ body {
 
 .navigation-list__item {
   text-decoration: none;
-  color: white;
+  color: rgb(7, 49, 11);
+
   font-size: 16px;
   font-weight: bold;
   transition: color 0.3s ease;
